Fixed QR code responsive size issues

--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
   <title>CashAddress Conversion</title>
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.3.0/mustache.js"></script>
   <script src="qrcode.js"></script>
   <script src="main.js"></script>
